# Veiron-Network-Main

./: .dockerignore  .gitignore  Cargo.toml  MIGRATION_STATUS.md  README.md  audicopilot.md  clippy.toml  vireon.ps1  vireon.sh  vps-fix.md
.github/: CUM-FACI-RELEASE.md  README.md  install-workflows.ps1  install-workflows.sh
.github/workflows/: android-ci.yml  candidate-chain-health.yml  candidate-linux-release.yml  candidate-quality.yml  candidate-vps-release.yml  candidate-windows-release.yml  explorer-ci.yml  linux-desktop-ci.yml  linux-desktop.yml  release-gate.yml  rust-ci.yml  vps-control-plane-release.yml
.review/pipeline/: AGENTS.md  ORCHESTRATOR.md  README.md  STATE_MACHINE.md
configs/: genesis.mainnet-candidate.toml  local.toml  mainnet-candidate.toml  rpc.local.toml  rpc.mainnet-candidate.toml
docs/: DOCUMENTATION_INVENTORY.md  DOCUMENTATION_POLICY.md  README.md  SETUP.md  _404.md  _coverpage.md  _navbar.md  _sidebar.md  documentation-manifest.json  index.html
docs/api/: 00_RPC_GATEWAY_OVERVIEW.md  01_RPC_ENDPOINTS_DRAFT.md  02_RPC_RESPONSE_MODELS.md  03_MINING_POOL_API_DRAFT.md  04_SDK_CLIENT_V0.md  README.md
docs/architecture/: 00_SYSTEM_OVERVIEW.md  01_BASE_LAYER.md  02_EXECUTION_LAYER.md  03_PRODUCT_LAYER.md  04_CORE_WALLET_RPC_INDEXER_EXPLORER_IMPACT.md  05_WINDOWS_DESKTOP_DIRECTION.md  06_CLIENT_PLATFORM_DIRECTION.md  07_BROWSER_EXTENSION_AND_NATIVE_HOST.md  README.md
docs/assets/: docs.css
docs/engineering/: WORKSPACE_AND_LINTS.md
docs/legal/: LICENSING_POLICY.md  README.md
docs/migration/: VIREON_BRAND_MIGRATION.md
docs/mining/: CUDA_AND_ASIC_RESISTANCE.md  GPU_MINING.md  README.md
docs/operator/: CHAIN_HEALTH.md  COMMANDS.md  LINUX_DESKTOP.md  LOCAL_RUNBOOK.md  MINING_TROUBLESHOOTING.md  TROUBLESHOOTING.md
docs/protocol/: 00_PROTOCOL_OVERVIEW.md  01_CHAIN_PARAMETERS.md  02_VIRE_UNITS_AND_SUPPLY.md  03_EMISSION_AND_HALVING.md  04_BLOCK_STRUCTURE.md  05_TRANSACTION_MODEL.md  06_CONSENSUS_POW.md  07_DIFFICULTY_ADJUSTMENT_DRAFT.md  08_ONCHAIN_OFFCHAIN_MODEL.md  09_ADDRESS_AND_KEYS_DRAFT.md  10_DEVNET_SCOPE.md  11_IMPLEMENTATION_PHASES.md  12_P2P_NETWORKING_DRAFT.md  12_UPGRADE_ACTIVATION_POLICY.md  13_CHECKPOINT_POLICY.md  13_MINING_POOL_PROTOCOL_DRAFT.md  README.md
docs/release/: CANDIDATE_CHAIN_RESET_0.10.0.md  CANDIDATE_CHAIN_RESET_0.9.0.md  GENESIS.md  GENESIS_APPROVAL.mainnet-candidate.json  GENESIS_REVIEW.mainnet-candidate.json  MAINNET_CANDIDATE_CHECKLIST.md  NETWORK_MATURITY.md  PROJECT_AUDIT_2026-07-17.md  PROJECT_AUDIT_COMPLETE_2026-07-17.md  RELEASE_GATE.md  genesis.mainnet-candidate.block.json
docs/roadmap/: README.md
docs/security/: MINING_POOL_RISKS.md  PRODUCTION_RISKS.md  README.md  SECRET_HANDLING.md  SECURITY_GATE.md
docs/tokenomics/: 00_TOKENOMICS_OVERVIEW.md  01_SUPPLY_AND_REWARD_MATH.md  02_FEES_DRAFT.md  03_PUBLIC_CLAIMS_RULES.md  README.md
docs/whitepaper/: README.md
info_and_task/: VIREON_MAINNET_TASK_MASTER.md  VIRE_HALVING_AND_BURN_POLICY.md
scripts/: README.md
scripts/browser/: check-health.sh  prepare-clean-pr-worktree.ps1  print-epic-pr-paths.ps1  probe-chain.ps1  probe-chain.sh  register-health-task.ps1  register-native-host.ps1  register-native-host.sh  setup-extension.ps1  unregister-native-host.ps1  verify-pr-worktrees.ps1
scripts/dev/: devnet-init.ps1  devnet-init.sh  devnet-mine.ps1  devnet-mine.sh  devnet-reset.ps1  devnet-reset.sh  devnet-status.ps1  devnet-status.sh  pool-maturity-probe.py  rpc-start.ps1  rpc-start.sh
scripts/docs/: audit-docs.mjs
scripts/git/: check-forbidden-files.ps1  check-forbidden-files.sh  push-main.ps1  push-main.sh
scripts/github/: sync-and-release-vps.ps1  sync-and-release-vps.sh
shared/: README.md
veiron-android/: build-native.sh  settings.gradle.kts
veiron-browser/host/: Cargo.toml
veiron-browser/host/src/: keystore.rs  main.rs  native_messaging.rs
veiron-browser/host/tests/: protocol_keystore.rs
veiron-desktop/: Cargo.toml  README.md
veiron-desktop-tauri/: .gitignore  MIGRATION.md  README.md  index.html  package.json  vite.config.ts
veiron-examples/: package.json
veiron-explorer/: .env.example  package-lock.json
veiron-indexer/: Cargo.toml
veiron-indexer/src/: error.rs  index.rs
veiron-miner/: config.example.toml
veiron-monitoring/: README.md
veiron-ops/: README.md
veiron-sdk/: package.json  tsconfig.json
veiron-sdk-rust/: README.md
veiron-website/: .env.example  package.json
vireon-android/: README.md  build-native.ps1
vireon-benchmarks/: README.md
vireon-browser/: README.md
vireon-community/: README.md
vireon-contracts/: README.md
vireon-core/: Cargo.toml  README.md  build.rs
vireon-desktop-tauri/: package-lock.json  tsconfig.json
vireon-desktop-tauri/native/keystore-helper/: Cargo.toml
vireon-desktop-tauri/native/keystore-helper/src/: main.rs  windows_dialog.rs
vireon-devnet/: README.md
vireon-examples/: README.md
vireon-explorer/: README.md  eslint.config.js  index.html  package.json
vireon-faucet/: README.md
vireon-governance/: README.md
vireon-indexer/: README.md
vireon-infra/: README.md
vireon-marketplace/: README.md
vireon-miner/: Cargo.toml  README.md  build.rs
vireon-mining-pool/: Cargo.toml  README.md  config.example.toml
vireon-mobile-core/: Cargo.toml
vireon-node/: Cargo.toml  README.md
vireon-passport/: README.md
vireon-release/: README.md
vireon-research/: README.md
vireon-rpc-gateway/: Cargo.toml  README.md
vireon-rpc-gateway/config/: devnet-rpc.toml
vireon-rpc-gateway/src/: app.rs  models.rs
vireon-sdk/: README.md  package-lock.json
vireon-sdk-rust/: Cargo.toml
vireon-sdk-rust/docs/: API.md  JS_PARITY.md
vireon-sdk-rust/src/: config.rs  error.rs  lib.rs  maturity.rs  wallet.rs
vireon-sdk-rust/src/protocol/: amount.rs  constants.rs  network.rs  seed.rs  signing.rs
vireon-sdk-rust/src/rpc/: client.rs  models.rs
vireon-sdk-rust/tests/: rpc_mock.rs
vireon-security/: README.md
vireon-tests/: README.md
vireon-wallet/: Cargo.toml  README.md
vireon-website/: DEPLOYMENT.md  README.md  index.html  package-lock.json  tailwind.config.js
(+601 files in other folders)
