# Veiron Cargo workspace — intentionally scoped (see docs/engineering/WORKSPACE_AND_LINTS.md).
#
# Members = Rust crates built/tested together by `cargo test --workspace` and G1 release-gate.
# NOT members (managed separately on purpose):
#   - veiron-explorer, veiron-website  → Node/Vite frontends (npm)
#   - veiron-desktop-tauri             → own [workspace] + Tauri toolchain (Control Center)
#   - veiron-android                   → Gradle/Kotlin + mobile-core FFI
#   - veiron-desktop-tauri/native/keystore-helper → sidecar with nested [workspace]
#   - docs-only / empty product stubs (sdk, contracts, faucet, …)
[workspace]
members = [
    "veiron-core",
    "veiron-node",
    "veiron-rpc-gateway",
    "veiron-wallet",
    "veiron-sdk-rust",
    "veiron-browser/host",
    "veiron-indexer",
    "veiron-miner",
    "veiron-mining-pool",
    "veiron-desktop",
    "veiron-mobile-core",
    "veiron-release/vps-control-plane/admin-server",
]
resolver = "2"

# Workspace-wide Clippy defaults for members that opt in with:
#   [lints]
#   workspace = true
# Tests still use expect/unwrap freely; production code should prefer Result + ?.
# Full policy: docs/engineering/WORKSPACE_AND_LINTS.md
[workspace.lints.clippy]
# Keep noise low for legitimate test fixtures; CI release-gate still uses -D warnings
# for correctness lints. unwrap/expect remain "allow" at workspace level so historical
# test modules compile; scanners should filter #[cfg(test)] (see engineering doc).
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
too_many_arguments = "warn"
