[package]
name = "veiron-indexer"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Draft local indexer for the Veiron private devnet"

[dependencies]
atomic-write-file = "0.3"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
veiron-core = { path = "../veiron-core" }
veiron-node = { path = "../veiron-node" }

[dev-dependencies]
tempfile = "3"
