[package]
name = "veiron-browser-host"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Native messaging host for the Veiron browser extension scaffold"
publish = false

[[bin]]
name = "veiron-browser-host"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
dirs = "5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
veiron-sdk-rust = { path = "../../veiron-sdk-rust", features = ["native", "blocking"] }
zeroize = "1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
